--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,700&family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300..800&display=swap&family=Roboto:wght@300&display=swap');
 
 @media (min-width: 1px) {
   /* Pour un écran >= 1px, cette classe CSS s'applique */
@@ -60,8 +60,15 @@ body {
   box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
 }
 
-.card, .languages {
+.date, .card, .languages {
   display: flex;
+}
+
+.date {
+  flex-direction: column;
+}
+
+.card, .languages {
   justify-content: space-between;
   align-items: baseline;
 }
@@ -81,26 +88,27 @@ body {
 
 .img-circle {
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  object-fit: scale-down;
-  object-position: 50%;
+  width: 110px;
+  height: 110px;
 }
 
 h1, h2, h3, h4, h5 {
   /* Configuration google-fonts */
   font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
-  font-variation-settings: "wdth" 100;
   /* Configuration google-fonts */
   margin: 10px 0;
 }
+
 h3 {
   border-bottom: 1px solid black;
   padding-bottom: 5px;
   margin-top: 0;
+}
+
+h5 {
+  font-weight: 500;
 }
 
 p, li {
@@ -109,10 +117,4 @@ p, li {
 
 ul {
   padding-left: 1em;
-}
-
-.img-circle {
-  border-radius: 50%;
-  width: 110px;
-  height: 110px;
 }
