--- a/style.css
+++ b/style.css
@@ -26,8 +26,10 @@
 
 @media print
 {
-  .category {
-    break-inside: avoid;
+  /* Pour l'impression, cette classe CSS s'applique */
+  .container {
+    width: 100%;
+    font-size: medium;
   }
 }
 
